modification du responsive

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                         </div>
                     </nav>
                     <!-- Header-->
-                    <div class="container paysage slogan  rounded-4 position-relative">
-                        <div class=" position-absolute top-50 start-50 translate-middle text-center text-white w-50 text-white px-5 text-slogan ">
+                    <div class="container paysage slogan  rounded-3 position-relative ">
+                        <div class=" position-absolute bottom-0 start-50 translate-middle text-center text-white w-70 text-white px-5 text-slogan rounded-3">
                             <div class="animate-on-scroll animate-on-scroll--card">
-                                <p>Votre plus belle experience religieuse vivez la avec nous</p>
+                                <h1>Votre plus belle experience religieuse vivez la avec nous</h1>
                             </div>
                         </div>
                     </div>
@@ -139,15 +139,11 @@
                 </div>
             </div>
             <!-- Blog preview section-->
-            <section class="">
-                <div class="container px-5 my-5 ">
+            <section>
+                <div class="vente-record">
                     <div>
-                        <div class="row gx-5 justify-content-center">
-                            <div class="col-lg-8 col-xl-6">
-                                <div class="text-center">
-                                    <h2 class="fw-bolder">Nos ventes records</h2>
-                                </div>
-                            </div>
+                        <div class="text-center">
+                            <h2 class="fw-bolder">Nos ventes records</h2>
                         </div>
                         <div class="card-containainer-body">
                             <div class="card__container swiper">
@@ -158,14 +154,12 @@
                                                 <img src="assets/img/carte1-avant.webp" alt="image" class="card__img">
                                                 <div class="card__shadow"></div>
                                             </div>
-                            
                                             <div class="card__data">
                                             <h3 class="card__name">Kell Dawx</h3>
                                             <p class="card__description">
                                                 Passionate about development and design, 
                                                 I carry out projects at the request of users.
                                             </p>
-                            
                                             <a href="#" class="card__button">View More</a>
                                             </div>
                                         </article>
