--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                                     <div class="search-container d-flex align-items-center icons">
                                         <!-- Icône de recherche (visible par défaut) -->
                                         <a class="btn btn-link search-icon" id="searchToggle">
-                                            <img src="assets/search-heart.svg" alt="">
+                                            <img loading="lazy" src="assets/search-heart.svg" alt="">
                                         </a>
                                         
                                         <!-- Champ de recherche (caché par défaut) -->
@@ -196,10 +196,10 @@
             </div>
             <div class="position-fixed bottom-0 end-0 p-3 icons" style="z-index: 11 ">
                 <div class="d-flex flex-column bg-tranparent">
-                    <a href="#" class="btn  btn-floating m-1"><img src="assets/facebook.png" alt=""></a>
-                    <a href="#" class="btn  btn-floating m-1 "><img src="assets/instagram.png" alt=""></a>
-                    <a href="#" class="btn  btn-floating m-1 "><img src="assets/tiktok.svg" alt=""></a>
-                    <a href="#" class="btn  btn-floating m-1 "><img src="assets/whatsapp.png" alt=""></a>
+                    <a href="#" class="btn  btn-floating m-1"><img loading="lazy" src="assets/facebook.png" alt=""></a>
+                    <a href="#" class="btn  btn-floating m-1 "><img loading="lazy" src="assets/instagram.png" alt=""></a>
+                    <a href="#" class="btn  btn-floating m-1 "><img loading="lazy" src="assets/tiktok.svg" alt=""></a>
+                    <a href="#" class="btn  btn-floating m-1 "><img loading="lazy" src="assets/whatsapp.png" alt=""></a>
                 </div>
             </div>
         </footer>
