--- a/notre-concept.html
+++ b/notre-concept.html
@@ -55,7 +55,7 @@
                                     <div class="search-container d-flex align-items-center icons">
                                         <!-- Icône de recherche (visible par défaut) -->
                                         <a class="btn btn-link search-icon" id="searchToggle">
-                                            <img src="assets/search-heart.svg" alt="">
+                                            <img loading="lazy" src="assets/search-heart.svg" alt="">
                                         </a>
                                         
                                         <!-- Champ de recherche (caché par défaut) -->
@@ -81,7 +81,7 @@
                 <div class="row gx-5">
                     <div class="col-lg-3">
                         <div class="d-flex align-items-center mt-lg-5 mb-4">
-                            <img class="img-fluid rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." />
+                            <img loading="lazy" class="img-fluid rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." />
                             <div class="ms-3">
                                 <div class="fw-bold">Coura Astou</div>
                                 <div class="text-muted">Nouvelle entreprise</div>
@@ -102,7 +102,7 @@
                                 <a class="badge bg-secondary text-decoration-none link-light" href="#!">Religion</a>
                             </header>
                             <!-- Preview image figure-->
-                            <figure class="mb-4"><img class="img-fluid rounded" src="https://dummyimage.com/900x400/ced4da/6c757d.jpg" alt="..." /></figure>
+                            <figure class="mb-4"><img loading="lazy" class="img-fluid rounded" src="https://dummyimage.com/900x400/ced4da/6c757d.jpg" alt="..." /></figure>
                             <!-- Post content-->
                             <section class="mb-5">
                                 <p class="fs-5 mb-4">Science is an enterprise that should be cherished as an activity of the free human mind. Because it transforms who we are, how we live, and it gives us an understanding of our place in the universe.</p>
