--- a/contact.html
+++ b/contact.html
@@ -209,5 +209,7 @@
         <script src="js/scroll.js"></script>
         <!-- Core theme JS-->    
         <script src="js/panier.js"></script>
+        <script src="js/lazy-loading.js"></script>
+
     </body>
 </html>
