mis a jour de l'url des image du waper de la boutique

--- a/boutique.html
+++ b/boutique.html
@@ -105,7 +105,7 @@
                                 
                                 <div class="images">
                                     <div class="lazy-bg img-1" data-bg="url(assets/img/family-2.jpg)" ></div>
-                                    <div class="lazy-bg img-2" data-bg="url(../assets/img/fammille-2.jpg)"></div>
+                                    <div class="lazy-bg img-2" data-bg="url(assets/img/fammille-2.jpg)"></div>
                                 </div>
                                 <div class="slider">
                                     <div class="drag-line">
