--- a/notre-concept.html
+++ b/notre-concept.html
@@ -78,8 +78,8 @@
             <!-- Page Content-->
             <section class="py-5">
                 <div class="container px-5 my-5">
-                <div class="row gx-5">
-                    <div class="col-lg-3">
+                <div class="row gx-5 ">
+                    <div class="col-lg-3 animate-on-scroll animate-on-scroll--cta">
                         <div class="d-flex align-items-center mt-lg-5 mb-4">
                             <img loading="lazy" class="img-fluid rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." />
                             <div class="ms-3">
@@ -88,7 +88,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-9">
+                    <div class="col-lg-9 animate-on-scroll animate-on-scroll--cta">
                         <!-- Post content-->
                         <article>
                             <!-- Post header-->
@@ -102,7 +102,7 @@
                                 <a class="badge bg-secondary text-decoration-none link-light" href="#!">Religion</a>
                             </header>
                             <!-- Preview image figure-->
-                            <figure class="mb-4"><img loading="lazy" class="img-fluid rounded" src="https://dummyimage.com/900x400/ced4da/6c757d.jpg" alt="..." /></figure>
+                            <figure class="mb-4"><img loading="lazy" class="img-fluid rounded" src="assets/img/shop.jpg" alt="..." /></figure>
                             <!-- Post content-->
                             <section class="mb-5">
                                 <p class="fs-5 mb-4">Science is an enterprise that should be cherished as an activity of the free human mind. Because it transforms who we are, how we live, and it gives us an understanding of our place in the universe.</p>
@@ -117,7 +117,7 @@
                 </div>
                 </div>
             </section>
-            <section class="py-5">
+            <section class="py-5 animate-on-scroll animate-on-scroll--card">
                 <div class="container px-5">
                     <h1 class="fw-bolder fs-5 mb-4 text-center">Fondateurs</h1>
                     <div class="card border-0 shadow rounded-3 overflow-hidden">
@@ -134,7 +134,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-lg-6 col-xl-7"><div class="bg-featured-blog" style="background-image: url('https://dummyimage.com/700x350/343a40/6c757d')"></div></div>
+                                <div class="col-lg-6 col-xl-7"><div class="bg-featured-blog" style="background-image: url('assets/img/equipe.jpg')"></div></div>
                             </div>
                         </div>
                     </div>
@@ -150,7 +150,7 @@
                         <div class="col-xl-8">
                             <!-- FAQ Accordion 1-->
                             <h2 class="fw-bolder mb-3">Account &amp; Billing</h2>
-                            <div class="accordion mb-5" id="accordionExample">
+                            <div class="accordion mb-5 animate-on-scroll animate-on-scroll--cta" id="accordionExample">
                                 <div class="accordion-item">
                                     <h3 class="accordion-header" id="headingOne"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Accordion Item #1</button></h3>
                                     <div class="accordion-collapse collapse show" id="collapseOne" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
@@ -187,7 +187,7 @@
                             </div>
                             <!-- FAQ Accordion 2-->
                             <h2 class="fw-bolder mb-3">Website Issues</h2>
-                            <div class="accordion mb-5 mb-xl-0" id="accordionExample2">
+                            <div class="accordion mb-5 mb-xl-0 animate-on-scroll animate-on-scroll--cta" id="accordionExample2">
                                 <div class="accordion-item">
                                     <h3 class="accordion-header" id="headingOne"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne2" aria-expanded="true" aria-controls="collapseOne2">Accordion Item #1</button></h3>
                                     <div class="accordion-collapse collapse show" id="collapseOne2" aria-labelledby="headingOne" data-bs-parent="#accordionExample2">
