integration de firebase

--- a/notre-concept.html
+++ b/notre-concept.html
@@ -76,6 +76,8 @@
             </main>
         </header>
             <!-- Page Content-->
+            <div id="products-container"></div>
+
             <section class="py-5">
                 <div class="container px-5 my-5">
                 <div class="row gx-5 ">
@@ -263,6 +265,7 @@
                 </div>
             </div>
         </footer>
+        <script type="module" src="js/liendb.js"></script>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
