--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <div class="bienvenu fw-bold">
                         <marquee behavior="" direction=""> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas ullam molestiae repudiandae.</marquee>
                     </div>
+                    
                     <nav class="navbar navbar-expand-lg ">
                         <div class="container pp">
                             <a class="navbar-brand " id="logo" href="index.html">CouraAstou</a>
@@ -88,6 +89,8 @@
             </main>
         </header>
             <!-- Features section-->
+
+
             <section class="py-5" id="features">
                 <div class="container">
                     <div class="row align-items-center">
@@ -707,6 +710,7 @@
                 </div>
             </div>
         </footer>
+        <script src="js/liendb.js"></script>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
